WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217372
In case all tracks are ended, enqueue a task to stop recording instead of stopping recording
https://bugs.webkit.org/show_bug.cgi?id=217372
Summary
In case all tracks are ended, enqueue a task to stop recording instead of sto...
youenn fablet
Reported
2020-10-06 02:45:50 PDT
In case all tracks are ended, enqueue a task to stop recording instead of stopping recording
Attachments
Patch
(3.65 KB, patch)
2020-10-06 02:47 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-10-06 02:47:11 PDT
Created
attachment 410621
[details]
Patch
EWS
Comment 2
2020-10-06 06:41:19 PDT
Committed
r268047
: <
https://trac.webkit.org/changeset/268047
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410621
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-06 06:42:26 PDT
<
rdar://problem/69997279
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug