In case all tracks are ended, enqueue a task to stop recording instead of stopping recording https://bugs.webkit.org/show_bug.cgi?id=217372

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/mediacapture-record/MediaRecorder-stop-expected.txt:

Source/WebCore:

Covered by updated test.

* Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::trackEnded):


Canonical link: https://commits.webkit.org/230146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268047 268f45cc-cd09-0410-ab3c-d52691b4dbfc